# mtgscrap

./: Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: weekly-scrape.yml
_output/decks/: legacy_decklists_20260413_171926.csv  legacy_decklists_20260414_085008.csv  legacy_decklists_20260414_085047.csv  legacy_decklists_20260414_094711.csv  legacy_decklists_20260414_114603.csv
_output/reports/: hate_cards_report_20260413_171926.txt  hate_cards_report_20260414_071543.txt  hate_cards_report_20260414_085047.txt  hate_cards_report_20260414_094711.txt  hate_cards_report_20260414_114603.txt
input/: hatecards.txt
mtg/: __init__.py  scryfall.py
mtg/deck/: __init__.py  export.py
mtg/deck/scrapers/: __init__.py  goldfish.py
mtgscrap/: __init__.py
scripts/: analyze_hate_cards.py  generate_pdf_report.py  scrape_legacy.py
